# georgeforge

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  devenv.nix  pyproject.toml  tox.ini
.github/workflows/: automated-checks.ayml  automated-checks.yml  potential-duplicates.yaml  pypi-release.yaml  pypi-release.yml
georgeforge/: __init__.py  admin.py  app_settings.py  auth_hooks.py  forms.py  models.py  tasks.py  urls.py  views.py
georgeforge/management/commands/: georgeforge_eveuniverse_load.py  georgeforge_preload_common_eve_types.py
georgeforge/migrations/: 0001_initial.py  0001_squashed_0020_alter_order_deposit_alter_order_paid_and_more.py  0002_alter_general_options_forsale.py  0003_alter_forsale_description.py  0004_alter_forsale_eve_type.py  0005_alter_forsale_eve_type_order.py  0006_alter_order_eve_type.py  0007_order_description_alter_forsale_description_and_more.py  0008_order_status.py  0009_alter_order_status.py  0010_alter_order_notes.py  0011_forsale_deposit_order_paid.py  0012_deliverysystem.py  0013_order_deliverysystem_and_more.py  0014_order_deposit_order_quantity_alter_forsale_price_and_more.py  0015_order_totalcost.py  0016_alter_order_status.py  0017_alter_order_status.py  0018_alter_deliverysystem_options_alter_forsale_options_and_more.py  0019_order_on_behalf_of.py  0020_alter_order_deposit_alter_order_paid_and_more.py  0028_alter_order_estimated_delivery_date.py  0029_alter_order_status.py
georgeforge/templatetags/: georgeforge_extras.py
testauth/settings/: local.py
(+13 files in other folders)
